--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
       </p>
       {% unless site.remove-ads %}<p class="theme-by text-muted">
         Made with ♥ using
-        <a href="https://beautifuljekyll.com">Beautiful Jekyll</a>
+        <a href="https://beautifuljekyll.com" style="color: white;">Beautiful Jekyll</a>
       </p>{% endunless %}
       </div>
     </div>
