--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -786,9 +786,10 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
   font-weight: 800;
   letter-spacing: 1px;
   padding: 0.625rem 0.3125rem;
-  background-color: #FFF;
+  background-color: #E4E7EA;
   border-radius: 0;
-  color: {{ site.text-col | default: "#404040" }};
+  color: #0B0C10;
+  /* color: {{ site.text-col | default: "#404040" }}; */
 }
 @media (min-width: 768px) {
   .pagination .page-item .page-link {
