--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -12,7 +12,7 @@ html {
 
 body {
   font-family: 'Lora', 'Times New Roman', serif;
-  font-size: 1.125rem;
+  font-size: 1.1rem;
   color: {{ site.text-col | default: "#404040" }};
   position: relative;
   background-color: {{ site.page-col | default: "#FFFFFF" }};
@@ -66,7 +66,13 @@ hr.small {
   border-color: inherit;
   border-radius: 0.1875rem;
 }
-
+hr.large {
+  max-width: 30rem;
+  margin: 1rem auto;
+  border-width: 0.25rem;
+  border-color: inherit;
+  border-radius: 0.1875rem;
+}
 /* fix in-page anchors to not be behind fixed header */
 :target:before {
   content: "";
@@ -825,10 +831,11 @@ table tr th {
   padding: 0.375rem 0.8125rem;
 }
 table tr td {
-  border: 1px solid #cccccc;
+  border: 1px solid #292323;
   text-align: left;
   margin: 0;
   padding: 0.375rem 0.8125rem;
+  color: #0B0C10;
 }
 table tr th :first-child,
 table tr td :first-child {
