--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -660,6 +660,14 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
   margin-top: 0;
   font-size: 3.125rem;
 }
+
+@media (max-width: 768px) {
+  .intro-header .page-heading h1 {
+    margin-top: 0;
+    font-size: 2rem;
+  }
+}
+
 .intro-header .post-heading h1 {
   margin-top: 0;
   font-size: 2.1875rem;
