Add blogs, summer projects resources, Update UI

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -87,7 +87,7 @@ layout: page
    {% endfor %}
 </div>
 
-{% if paginator.total_pages > 1 %}
+<!-- {% if paginator.total_pages > 1 %}
 <ul class="pagination main-pager">
   {% if paginator.previous_page %}
   <li class="page-item previous">
@@ -100,7 +100,7 @@ layout: page
   </li>
   {% endif %}
 </ul>
-{% endif %}
+{% endif %} -->
 
 <ul class="pagination blog-pager">
   <li class="page-item">
