Add associate members

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -38,6 +38,42 @@ layout: page
     </div>
 </div>
 
+<h3 style="text-align: center;">Associate Members (2021-22)</h3><br>
+
+<div class="container pt-6 pb-6">
+    <div class="row pt-6 pb-6">
+        {% for member in site.associate_members %}
+        <div class="col-12 col-md-6 mb-2">
+            <div class="card border-0">
+                {% if member.image_path %}
+                <img alt="{{ member.title }}" class="img-fluid mb-2 card-img-top" src="{{ site.baseurl }}{{ member.image_path }}" />
+                {% endif %}
+                <div class="card-body text-center" style="padding: 0px;">
+                    <h4 class="card-title mb-0" style="padding-bottom: 10px; margin: 10px;">{{ member.title }}</h4>
+                    <h6 class="card-text">{{ member.info }}</h6>
+                    <ul class="list-inline text-center" style="margin: 0;">
+                        <li class="list-inline-item">
+                        <a target="_blank" href="https://facebook.com/{{ member.facebook }}" title="Facebook">
+                            <span class="fa-stack fa-lg" aria-hidden="true">
+                            <i class="fab fa-facebook fa-stack-1x"></i>
+                            </span>
+                        </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://instagram.com/{{ member.insta }}" title="Instagram">
+                                <span class="fa-stack fa-lg" aria-hidden="true">
+                                <i class="fab fa-instagram fa-stack-1x"></i>
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>                
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+
 <h3 style="text-align: center;">Ex-Coordinators (2020-21)</h3><br>
 
 <div class="container pt-6 pb-6">
