--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: 'Nunito', 'Lora', 'Times New Roman', serif;
   font-size: 1.1rem;
   color: {{ site.text-col | default: "#404040" }};
   position: relative;
@@ -475,7 +475,7 @@ footer .footer-custom-content {
   font-size: 1.125rem;
   font-style: italic;
   margin: 0 0 0.625rem;
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: 'Nunito', 'Lora', 'Times New Roman', serif;
 }
 .post-heading .post-meta {
   display: inline-block;
