--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -74,6 +74,40 @@ layout: page
     </div>
 </div>
 
+<h3 style="text-align: center;">Secretaries (2021-22)</h3><br>
+
+<div class="container pt-6 pb-6">
+    <div class="row pt-6 pb-6">
+        <ol>
+            <li>Adit Jain (200038)</li>
+            <li>Aditya Kushwaha (200051)</li>
+            <li>Anshul Agarwal (200152)</li>
+            <li>Arkachur Bhattacharya (200184)</li>
+            <li>Aryan Vora (200204)</li>
+            <li>Atharva Dehadraya (200218)</li>
+            <li>Batta Soumith (200264)</li>
+            <li>Ganesh Kumar (200367)</li>
+            <li>Ishita Agarwal (200458)</li>
+            <li>Ishita Vyavahare (200459)</li>
+            <li>Kalash Talati (200484)</li>
+            <li>Kavish Priolkar (200502)</li>
+            <li>Keval Moliya (200509)</li>
+            <li>Kshipra Motikar (200598)</li>
+            <li>Nikita Singh (200638)</li>
+            <li>Ojsi Goel (200653)</li>
+            <li>Prabhdeep (200689)</li>
+            <li>Prasang Gupta (200706)</li>
+            <li>Priya Gole (200727)</li>
+            <li>Saikrishna S (200827)</li>
+            <li>Shashank Sinha (200920)</li>
+            <li>Tanush Kumar (201043)</li>
+            <li>Varshitha Janavi (201088)</li>
+            <li>Vasu Paliwal (201096)</li>
+            <li>Yashika Malhotra (201152)</li>
+        </ol>
+    </div>
+</div>
+
 <h3 style="text-align: center;">Ex-Coordinators (2020-21)</h3><br>
 
 <div class="container pt-6 pb-6">
