--- a/_includes/head.html
+++ b/_includes/head.html
@@ -149,4 +149,6 @@
     {% endfor %}
   {% endif %}
 
+  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicon.ico" type="image/x-icon">
+
 </head>
