--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,6 @@
 <figure>
-    <img src="{{ site.baseurl }}{{ include.url }}"><br>
-    <figcaption style="text-align: center;"><em>{{ include.description }}</em></figcaption>
+  <img loading="lazy" src="{{ site.baseurl }}{{ include.url }}" /><br />
+  <figcaption style="text-align: center">
+    <em>{{ include.description }}</em>
+  </figcaption>
 </figure>
