--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,74 +8,78 @@ layout: page
 
 <div class="posts-list">
   {% for post in posts limit: 2 %}
-  <article class="post-preview">    
-    {%- capture thumbnail -%}
-      {% if post.thumbnail-img %}
-        {{ post.thumbnail-img }}
-      {% elsif post.cover-img %}
-        {% if post.cover-img.first %}
-          {{ post.cover-img[0].first.first }}
-        {% else %}
-          {{ post.cover-img }}
-        {% endif %}
-      {% else %}
-      {% endif %}
-    {% endcapture %}
-    {% assign thumbnail=thumbnail | strip %}
-
-    {% if site.feed_show_excerpt == false %}
-    {% if thumbnail != "" %}
+  <article class="post-preview">
+    {%- capture thumbnail -%} {% if post.thumbnail-img %}
+    {{ post.thumbnail - img }}
+    {% elsif post.cover-img %} {% if post.cover-img.first %}
+    {{ post.cover - img[0].first.first }}
+    {% else %}
+    {{ post.cover - img }}
+    {% endif %} {% else %} {% endif %} {% endcapture %} {% assign
+    thumbnail=thumbnail | strip %} {% if site.feed_show_excerpt == false %} {%
+    if thumbnail != "" %}
     <div class="post-image post-image-normal">
       <a href="{{ site.baseurl }}{{ post.url }}" aria-label="Thumbnail">
-        <img src="{{ site.baseurl }}{{ thumbnail }}" alt="Post thumbnail">
+        <img
+          loading="lazy"
+          src="{{ site.baseurl }}{{ thumbnail }}"
+          alt="Post thumbnail"
+        />
       </a>
     </div>
-    {% endif %}
-    {% endif %}
+    {% endif %} {% endif %}
 
     <a href="{{ site.baseurl }}{{ post.url }}">
       <h2 class="post-title">{{ post.title }}</h2>
 
       {% if post.subtitle %}
-        <h3 class="post-subtitle">
+      <h3 class="post-subtitle">
         {{ post.subtitle }}
-        </h3>
+      </h3>
       {% endif %}
     </a>
 
     <p class="post-meta">
-      {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
-      Posted on {{ post.date | date: date_format }}
+      {% assign date_format = site.date_format | default: "%B %-d, %Y" %} Posted
+      on {{ post.date | date: date_format }}
     </p>
 
     {% if thumbnail != "" %}
     <div class="post-image post-image-small">
       <a href="{{ site.baseurl }}{{ post.url }}" aria-label="Thumbnail">
-        <img src="{{ site.baseurl }}{{ thumbnail }}" alt="Post thumbnail">
+        <img
+          loading="lazy"
+          src="{{ site.baseurl }}{{ thumbnail }}"
+          alt="Post thumbnail"
+        />
       </a>
     </div>
-    {% endif %}
-
-    {% unless site.feed_show_excerpt == false %}
-    {% if thumbnail != "" %}
+    {% endif %} {% unless site.feed_show_excerpt == false %} {% if thumbnail !=
+    "" %}
     <div class="post-image post-image-short">
       <a href="{{ site.baseurl }}{{ post.url }}" aria-label="Thumbnail">
-        <img src="{{ site.baseurl }}{{ thumbnail }}" alt="Post thumbnail">
+        <img
+          loading="lazy"
+          src="{{ site.baseurl }}{{ thumbnail }}"
+          alt="Post thumbnail"
+        />
       </a>
     </div>
     {% endif %}
 
     <div class="post-entry">
       {% assign excerpt_length = site.excerpt_length | default: 50 %}
-      {{ post.excerpt | strip_html | xml_escape | truncatewords: excerpt_length }}
-      {% assign excerpt_word_count = post.excerpt | number_of_words %}
-      {% if post.content != post.excerpt or excerpt_word_count > excerpt_length %}
-        <a href="{{ site.baseurl }}{{ post.url }}" class="post-read-more">[Read&nbsp;More]</a>
+      {{
+        post.excerpt | strip_html | xml_escape | truncatewords: excerpt_length
+      }}
+      {% assign excerpt_word_count = post.excerpt | number_of_words %} {% if
+      post.content != post.excerpt or excerpt_word_count > excerpt_length %}
+      <a href="{{ site.baseurl }}{{ post.url }}" class="post-read-more"
+        >[Read&nbsp;More]</a
+      >
       {% endif %}
     </div>
-    {% endunless %}
-
-    {% if site.feed_show_tags != false and post.tags.size > 0 %}
+    {% endunless %} {% if site.feed_show_tags != false and post.tags.size > 0 %}
     <div class="blog-tags">
       <span>Tags:</span>
       {% for tag in post.tags %}
@@ -83,8 +87,8 @@ layout: page
       {% endfor %}
     </div>
     {% endif %}
-   </article>
-   {% endfor %}
+  </article>
+  {% endfor %}
 </div>
 
 <!-- {% if paginator.total_pages > 1 %}
@@ -104,7 +108,13 @@ layout: page
 
 <ul class="pagination blog-pager">
   <li class="page-item">
-    <a class="page-link" href="/blogs" data-toggle="tooltip" data-placement="top">View all posts &rarr;</a>
+    <a
+      class="page-link"
+      href="/blogs"
+      data-toggle="tooltip"
+      data-placement="top"
+      >View all posts &rarr;</a
+    >
   </li>
 </ul>
-<br>
+<br />
